# mps-traffic-density-app

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: README.md
data/demo_images/: README.md
docs/: llm_usage.md
models/: README.md
outputs/: README.md  requirements_checklist.md  sample_predictions.csv  training_summary.md
scripts/: run_adapted.ps1  run_baseline.ps1
src/mps_traffic_density/: __init__.py  density.py  detector.py  io_utils.py  onnx_detector.py  prepare_bmd45_subset.py  run_inference.py  schema.py  train_yolo.py  vehicle_classes.py  visualization.py
