[project]
name = "mps-traffic-density"
version = "0.1.0"
description = "Vehicle detection and traffic density labeling app for the MPS Lab testing project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.24.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.1",
    "streamlit>=1.36.0",
    "tqdm>=4.66.0",
    "ultralytics>=8.3.0",
]

[project.scripts]
mps-prepare-bmd45 = "mps_traffic_density.prepare_bmd45_subset:main"
mps-infer = "mps_traffic_density.run_inference:main"
mps-train = "mps_traffic_density.train_yolo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mps_traffic_density"]

